--- a/apps/sim/app/.env.example
+++ b/apps/sim/app/.env.example
@@ -13,6 +13,11 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # Security (Required)
 ENCRYPTION_KEY=your_encryption_key  # Use `openssl rand -hex 32` to generate, used to encrypt environment variables
+
+# ========================================
+# Version Information (Optional)
+# ========================================
+# NEXT_PUBLIC_APP_VERSION=  # Application version (automatically set in Docker builds, otherwise uses package.json version)
 INTERNAL_API_SECRET=your_internal_api_secret # Use `openssl rand -hex 32` to generate, used to encrypt internal api routes
 
 # Email Provider (Optional)
